--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Calculator</title>
 </head>
 <body>
     <div class="app">
         <div class="display">
-            <p class="input"></p>
-            <p class="result"></p>
+            <p class="input">0</p>
+            <p class="result">1</p>
         </div>
 
         <div class="buttons">
