--- a/index.html
+++ b/index.html
@@ -9,34 +9,28 @@
 <body>
     <div class="app">
         <div class="display">
-            <p class="input">0</p>
-            <p class="result">1</p>
+            <p class="input"></p>
+            <p class="result"></p>
         </div>
 
         <div class="buttons">
-            <div class="numbers">
-                <button id="0">0</button>
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
                 <button id="7">7</button>
                 <button id="8">8</button>
                 <button id="9">9</button>
-            </div>
-
-            <div class="operators">
-                <button id="plus">+</button>
-                <button id="minus">-</button>
                 <button id="division">/</button>
-                <button id="multiplier">*</button>
+                <button id="4">4</button>
+                <button id="5">5</button>
+                <button id="6">6</button>
+                <button id="multiplier">X</button>
+                <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
+                <button id="minus">-</button>
+                <button id="0">0</button>
+                <button id="decimal">,</button>
                 <button id="reset">C</button>
+                <button id="plus">+</button>
                 <button id="equal">=</button>
-                <button id="decimal">.</button>
-            </div>
-       
         </div>
     </div>
 </body>
