add calc operations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app">
         <div class="display">
             <p class="input"></p>
-            <p class="result"></p>
+            <p class="result">0</p>
         </div>
 
         <div class="buttons">
@@ -34,4 +34,6 @@
         </div>
     </div>
 </body>
+
+<script src="script.js"></script>
 </html>
