fix bugs, update display

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="app">
         <div class="display">
             <p class="input"></p>
-            <p class="result">0</p>
+            <p class="result"></p>
         </div>
 
         <div class="buttons">
